# Moonlight-XboxOG

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-mingw64.bat  build-mingw64.sh  build.sh  pyproject.toml  sonar-project.properties
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.run/: Run Moonlight ISO in xemu.run.xml  Setup portable xemu.run.xml  docs.run.xml  moonlight_xbox.run.xml
cmake/: host-mingw64-clang.cmake  make.bat  moonlight-dependencies.cmake  msys2.cmake  nxdk-cc.bat  nxdk-cxx.bat  nxdk-link.bat  nxdk-pkg-config.bat  nxdk.cmake  run-child-build.cmake  run-nxdk-tool.sh  sources.cmake  toolchain-nxdk-clion.cmake  xbox-build.cmake
cmake/modules/: FindNXDK.cmake  FindNXDK_SDL2.cmake  FindNXDK_SDL2_TTF.cmake  GetOpenSSL.cmake
docs/: Doxyfile  sunshine-pairing-research.md  working-client-plan.md
scripts/: ffmpeg-nxdk-cc.sh  ffmpeg-nxdk-cxx.sh  find-msys2.cmd  find-msys2.sh  generate_moonlight_logo.py  run-xemu.cmd  run-xemu.sh  setup-xemu.cmd  setup-xemu.sh  update_clang_format.py
src/: main.cpp  os.h
src/_nxdk_compat/: ffmpeg_compat.h  openssl_compat.h  poll_compat.cpp  share.h  stat_compat.cpp
src/app/: client_state.cpp  client_state.h  host_records.cpp  host_records.h  pairing_flow.cpp  pairing_flow.h  settings_storage.cpp  settings_storage.h
src/compat/moonlight-common-c/: moonlight_common_c_compat.h
src/compat/openssl/: conio.h  fd_compat.cpp  openssl_apps_compat.h  stat_compat.cpp
src/compat/openssl/sys/: resource.h
src/input/: navigation_input.cpp  navigation_input.h
src/logging/: global_logger.cpp  global_logger.h  log_file.cpp  log_file.h  logger.cpp  logger.h  startup_debug.cpp  startup_debug.h
src/network/: host_discovery.cpp  host_discovery.h  host_pairing.cpp  host_pairing.h  runtime_network.cpp  runtime_network.h
src/nxdk/: windows.h
src/nxdk/hal/: debug.h  video.h  xbox.h
src/platform/: error_utils.h  filesystem_utils.cpp  filesystem_utils.h
src/splash/: splash_layout.cpp  splash_layout.h  splash_screen.cpp  splash_screen.h
src/startup/: client_identity_storage.cpp  client_identity_storage.h  cover_art_cache.cpp  cover_art_cache.h  host_storage.cpp  host_storage.h  memory_stats.cpp  memory_stats.h  saved_files.cpp  saved_files.h  storage_paths.cpp  storage_paths.h  video_mode.cpp  video_mode.h
src/streaming/: ffmpeg_stream_backend.cpp  ffmpeg_stream_backend.h  session.cpp  session.h  stats_overlay.cpp  stats_overlay.h
src/ui/: host_probe_result_queue.cpp  host_probe_result_queue.h  menu_model.cpp  menu_model.h  shell_screen.cpp  shell_screen.h  shell_view.cpp  shell_view.h
tests/: CMakeLists.txt
tests/splash/: splash_layout_test.cpp
tests/support/: filesystem_test_utils.h  network_test_constants.h
tests/support/hal/: debug.h  video.h
tests/unit/app/: client_state_test.cpp  host_records_test.cpp  pairing_flow_test.cpp  settings_storage_test.cpp
tests/unit/input/: navigation_input_test.cpp
tests/unit/logging/: log_file_test.cpp  logger_test.cpp  startup_debug_test.cpp
tests/unit/network/: host_discovery_test.cpp  host_pairing_test.cpp  runtime_network_test.cpp
tests/unit/platform/: filesystem_utils_test.cpp
tests/unit/splash/: splash_layout_test.cpp
tests/unit/startup/: client_identity_storage_test.cpp  cover_art_cache_test.cpp  host_storage_test.cpp  saved_files_test.cpp  video_mode_test.cpp
tests/unit/streaming/: stats_overlay_test.cpp
tests/unit/ui/: host_probe_result_queue_test.cpp  menu_model_test.cpp  shell_view_test.cpp
xbe/assets/: README.md  moonlight-logo.ppm
